# demo-fancyexe

./: .gitmodules  .travis.yml  CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt  fancyexe.cpp
